<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/batteryID"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/batteryMenu"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/batteryEnabled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/batteryEnabled" />

    <TextView
        android:id="@+id/batteryLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/batteryLevel"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/batteryState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/batteryState"
        android:textAppearance="?android:attr/textAppearanceMedium" />
</LinearLayout> 